--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-OPENAI_API_KEY=
+# جهت استفاده ای پی آی متیس جایگزین شده است
+METIS_API_KEY="tpsg-********************"
+
+## OPENAI_API_KEY=
 
 LANGCHAIN_API_KEY=
 
